--- a/Advanced Computer Architecture/Advanced Computer Architecture.vcxproj.filters
+++ b/Advanced Computer Architecture/Advanced Computer Architecture.vcxproj.filters
@@ -55,15 +55,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="lilTest.txt">
-      <Filter>Source Files\assembly</Filter>
-    </Text>
-    <Text Include="lilTestMain.txt">
-      <Filter>Source Files\assembly</Filter>
-    </Text>
-    <Text Include="InstructionsTest.txt">
-      <Filter>Source Files\assembly</Filter>
-    </Text>
     <Text Include="Ackermann.txt">
       <Filter>Source Files\assembly</Filter>
     </Text>
@@ -71,6 +62,15 @@
       <Filter>Source Files\assembly</Filter>
     </Text>
     <Text Include="fibonnaci.txt">
+      <Filter>Source Files\assembly</Filter>
+    </Text>
+    <Text Include="colatz.txt">
+      <Filter>Source Files\assembly</Filter>
+    </Text>
+    <Text Include="test_grounds.txt">
+      <Filter>Source Files\assembly</Filter>
+    </Text>
+    <Text Include="powerConfig.txt">
       <Filter>Source Files\assembly</Filter>
     </Text>
   </ItemGroup>
